[package]
name = "smallpaw"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
poem = { version = "3.1.6", features = ["anyhow", "static-files"] }
redb = { version = "2.4.0", features = ["logging"] }
tracing = "0.1.41"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
tokio = { version = "1.17.0", features = ["full"] }
